# rizap2025

./: .gitignore  AGENTS.md
.github/workflows/: format.yml
backend/: .prettierignore  drizzle.config.ts  eslint.config.cjs  package.json  pnpm-lock.yaml  wrangler.jsonc
backend/src/: index.ts  types.ts
backend/src/db/: client.ts  schema.ts
backend/src/routes/: battle-logs.ts  enemies.ts  users.ts
frontend/: .prettierignore  app.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: _layout.tsx  battle-game.tsx  battle-result.tsx  battle.tsx  create-user.tsx  index.tsx  login.tsx  modal.tsx  register.tsx  settings.tsx  solo.tsx
frontend/app/(tabs)/: index.tsx
frontend/components/: login-screen.tsx  parallax-scroll-view.tsx  themed-text.tsx  themed-view.tsx
frontend/components/battle/: EnemyCard.tsx
frontend/components/common/: BackButton.tsx  ScreenHeader.tsx
frontend/components/providers/: auth-provider.tsx
frontend/components/themed/: Text.tsx  TextInput.tsx  index.ts
frontend/components/ui/: collapsible.tsx
frontend/entities/auth/: session.ts
frontend/entities/game/: mode.ts
frontend/entities/shared/: formik.ts
frontend/entities/users/: users.ts
frontend/hono/: client.mts  client.ts
frontend/services/auth/: create-user.ts  session.ts  signup.ts
frontend/services/database/: supabase.ts
frontend/utils/: api.ts  score.ts
score/: .gitignore  Dockerfile  README.md  app.py  build.sh  features.py  main.py  pyproject.toml  run.sh
score/input/: curl.sh  score.sh
score/score/: utils.py
(+2 files in other folders)
