[project]
name = "score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.2",
    "mediapipe>=0.10.13",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
